Add Coats to Stock

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Shop_l)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Shop_l main.cpp Product.h Milk.cpp Milk.h Stock.h Shop.h Cheese.cpp Cheese.h UserInterface.h EmptyProduct.cpp EmptyProduct.h Ham.cpp Ham.h Basket.h Shopping.h Client.cpp Client.h ClientAccount.cpp ClientAccount.h ShopAccount.cpp ShopAccount.h Bank.cpp Bank.h GroceryProduct.h Date.cpp Date.h ExpirationDate.h GuaranteeDate.h DairyProduct.h Meat.h HomewareProduct.h MobilePhones.h IPhone.h IPhone.cpp Nokia.cpp Nokia.h Computers.h)
+add_executable(Shop_l main.cpp Product.h Milk.cpp Milk.h Stock.h Shop.h Cheese.cpp Cheese.h UserInterface.h EmptyProduct.cpp EmptyProduct.h Ham.cpp Ham.h Basket.h Shopping.h Client.cpp Client.h ClientAccount.cpp ClientAccount.h ShopAccount.cpp ShopAccount.h Bank.cpp Bank.h GroceryProduct.h Date.cpp Date.h ExpirationDate.h GuaranteeDate.h DairyProduct.h Meat.h HomewareProduct.h MobilePhones.h IPhone.h IPhone.cpp Nokia.cpp Nokia.h Computers.h Coats.cpp Coats.h FemaleClothing.h Clothes.h)
